bug squashing

--- a/src/app/beast-view/beast-view-edit/weapon-square/weapon-square.component.css
+++ b/src/app/beast-view/beast-view-edit/weapon-square/weapon-square.component.css
@@ -9,3 +9,8 @@ button {
 .square-shell {
     background: whitesmoke;
 }
+
+.input-with-tooltip-shell {
+    width: 220px;
+    display: inline-block;
+}
